--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,16 +1,24 @@
 @charset "UTF-8";
 
+@import "interface";
+@import "font.player";
+@import "font.player";
+
 $interval : 542 * 0.001;
 
 html, body, #container, #frogLayer, #rippleLayer{
   background: #FBFBFB;
-	width:100%;
-	height:100%;
-  cursor: url(../img/cursor.png), crosshair;
+	width: 100%;
+  height: 100%;
+  overflow: hidden; // スクロールバーの非表示
   
   ::selection {
       background-color: transparent;
   }
+}
+
+#container{
+  cursor: url(../img/cursor.png), crosshair;
 }
 
 #welcome{
@@ -21,6 +29,15 @@ html, body, #container, #frogLayer, #rippleLayer{
   width: 1000px;
   height: 700px;
   font-weight:bold;
+}
+
+footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 120px;
+  padding: 20px 20px 0 20px;
+  background: #0B0B0B;
 }
 
 $animaWidth : 40px;
@@ -64,23 +81,6 @@ $animaHeight : 60px;
 	animation-fill-mode: forwards;
 }
 
-.rev0{
-	width: 45px; 
-	height: 115px;
-	//background-image:;
-}
-
-.rev1{
-	width: 55px;
-	height: 120px;
-	//background-color: #2F64FF;
-}
-
-.rev2{
-	width: 70px;
-	height: 130px;
-	//background-color: #2F64FF;
-}
 
 @keyframes ripple{
 	0%{
