--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -33,7 +33,7 @@ html, body, #container, #frogLayer, #rippleLayer{
 
 footer{
   position: fixed;
-  bottom: 0;
+  bottom: -150px;
   width: 100%;
   height: 120px;
   padding: 20px 20px 0 20px;
