--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,74 @@
 @charset "UTF-8";
-/* line 1, ../scss/_interface.scss */
+/* line 1, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#side-menu {
+  position: absolute;
+  top: 0px;
+  width: 300px;
+  height: 100%;
+  background: none #EEEEEE;
+}
+
+/* line 9, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#waveform {
+  width: 250px;
+  height: 250px;
+}
+
+/* line 14, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+.tracklist {
+  width: 250px;
+  list-style-type: none;
+}
+/* line 18, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+.tracklist li {
+  height: 89px;
+  margin-bottom: 4px;
+  background: none #AAAAAA;
+}
+
+/* line 25, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 #track-control {
   float: left;
-  width: 50px;
-  height: 50px;
+  width: 250px;
+  height: 45px;
   margin: 0 0 0 0;
   color: white;
   font-family: 'player';
-  font-size: 40px;
 }
-/* line 10, ../scss/_interface.scss */
+/* line 33, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 #track-control div {
   float: left;
   cursor: pointer;
+  margin-left: 18px;
 }
 
-/* line 20, ../scss/_interface.scss */
+/* line 40, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#track-control-back, #track-control-next, #track-control-repeat {
+  width: 40px;
+  font-size: 40px;
+  line-height: 1.2em;
+}
+/* line 45, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#track-control-back.disabled, #track-control-next.disabled, #track-control-repeat.disabled {
+  color: #666666;
+}
+
+/* line 50, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#track-control-pause {
+  width: 36px;
+  font-size: 65px;
+  line-height: 0.75em;
+}
+
+/* line 59, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 #volume {
-  width: 150px;
+  width: 200px;
   height: 50px;
   margin: 0px 0 0 0;
   float: left;
 }
 
-/* line 27, ../scss/_interface.scss */
+/* line 66, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 #bg_volume, #se_volume {
   width: 150px;
   height: 20px;
@@ -32,13 +77,53 @@
   position: relative;
 }
 
-/* line 34, ../scss/_interface.scss */
+/* line 74, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+.info-text {
+  float: left;
+  color: white;
+}
+
+/* line 79, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#time-control {
+  float: left;
+  width: 800px;
+  height: 100px;
+  margin: 0 0 0 0;
+  color: white;
+  font-family: 'player';
+  font-size: 30px;
+}
+/* line 88, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#time-control div {
+  float: left;
+  cursor: pointer;
+}
+/* line 93, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#time-control section {
+  width: 600px;
+  height: 30px;
+  margin: 0 0 10px 0;
+  float: left;
+  position: relative;
+}
+/* line 100, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#time-control section .slider {
+  width: 550px;
+}
+
+/* line 106, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
+#time-counter {
+  float: left;
+  margin-top: -10px;
+}
+
+/* line 111, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 .slider {
   border-width: 1px;
   border-style: solid;
   border-color: #333 #333 #777 #333;
   border-radius: 25px;
-  width: 100px;
+  width: 110px;
   position: absolute;
   height: 13px;
   background-color: #8e8d8d;
@@ -47,7 +132,7 @@
   left: 20px;
 }
 
-/* line 48, ../scss/_interface.scss */
+/* line 125, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 .tooltip {
   position: absolute;
   display: block;
@@ -71,19 +156,19 @@
   /* W3C */
 }
 
-/* line 66, ../scss/_interface.scss */
+/* line 143, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 .icon_volume {
   content: "";
-  display: inline-block;
+  position: absolute;
+  display: block;
   width: 25px;
   height: 25px;
-  right: -5px;
+  right: -15px;
   background: url("../img/volume.png") no-repeat 0 -75px;
-  position: absolute;
   margin-top: -5px;
 }
 
-/* line 76, ../scss/_interface.scss */
+/* line 153, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 .ui-slider-handle {
   position: absolute;
   z-index: 2;
@@ -98,7 +183,7 @@
   margin-left: -12px;
 }
 
-/* line 89, ../scss/_interface.scss */
+/* line 166, /Users/Shinnosuke/github/re-a-ct/scss/_interface.scss */
 .ui-slider-range {
   background: #ffffff;
   /* Old browsers */
@@ -131,36 +216,42 @@
   }
 }
 */
-/* line 22, ../scss/_font.player.scss */
+/* line 22, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-pause:before {
   content: '\2389';
 }
 
 /* '⎉' */
-/* line 23, ../scss/_font.player.scss */
+/* line 23, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-fast-forward:before {
   content: '\23e9';
 }
 
 /* '⏩' */
-/* line 24, ../scss/_font.player.scss */
+/* line 24, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-fast-backward:before {
   content: '\23ea';
 }
 
 /* '⏪' */
-/* line 25, ../scss/_font.player.scss */
+/* line 25, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-stop:before {
   content: '\25a0';
 }
 
 /* '■' */
-/* line 26, ../scss/_font.player.scss */
+/* line 26, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-play:before {
   content: '\25b6';
 }
 
 /* '▶' */
+/* line 27, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
+.icon-loop:before {
+  content: '🔁';
+}
+
+/* '\1f501' */
 @font-face {
   font-family: 'player';
   src: url("../font/player/player.eot?38789062");
@@ -179,36 +270,42 @@
   }
 }
 */
-/* line 22, ../scss/_font.player.scss */
+/* line 22, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-pause:before {
   content: '\2389';
 }
 
 /* '⎉' */
-/* line 23, ../scss/_font.player.scss */
+/* line 23, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-fast-forward:before {
   content: '\23e9';
 }
 
 /* '⏩' */
-/* line 24, ../scss/_font.player.scss */
+/* line 24, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-fast-backward:before {
   content: '\23ea';
 }
 
 /* '⏪' */
-/* line 25, ../scss/_font.player.scss */
+/* line 25, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-stop:before {
   content: '\25a0';
 }
 
 /* '■' */
-/* line 26, ../scss/_font.player.scss */
+/* line 26, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
 .icon-play:before {
   content: '\25b6';
 }
 
 /* '▶' */
+/* line 27, /Users/Shinnosuke/github/re-a-ct/scss/_font.player.scss */
+.icon-loop:before {
+  content: '🔁';
+}
+
+/* '\1f501' */
 /* line 9, ../scss/styles.scss */
 html, body, #container, #frogLayer, #rippleLayer {
   background: #FBFBFB;
