--- a/scss/_font.player.scss
+++ b/scss/_font.player.scss
@@ -24,3 +24,4 @@
 .icon-fast-backward:before { content: '\23ea'; } /* '⏪' */
 .icon-stop:before { content: '\25a0'; } /* '■' */
 .icon-play:before { content: '\25b6'; } /* '▶' */
+.icon-loop:before { content: '🔁'; } /* '\1f501' */
