--- a/scss/rect.scss
+++ b/scss/rect.scss
@@ -25,80 +25,86 @@ $fontSize : 17px;
   background:none #0079EB;
 }
 
-.frog[data-level='0']{
-	width: $animaWidth * 1.1; 
-	height: $animaHeight * 1.1;
-	background: none #000AEB;
-  font-size: $fontSize * 1.1;
-}
+.frog{
+	&[data-level='0']{
+		$ratio : 1.1;
+		width: round($animaWidth * $ratio); 
+		height: round($animaHeight * $ratio);
+		background: none #000AEB;
+		font-size: round($fontSize * $ratio);
+	}
 
-.frog[data-level='1']{
-	width: $animaWidth * 1.2; 
-	height: $animaHeight * 1.2;
-	background: none #5F00EB;
-  font-size: $fontSize * 1.2;
-}
+	&[data-level='1']{
+		$ratio : 1.2;
+		width: round($animaWidth * $ratio); 
+		height: round($animaHeight * $ratio);
+		background: none #5F00EB;
+		font-size: round($fontSize * $ratio);
+	}
 
-.frog[data-level='2']{
-	width: $animaWidth * 1.3; 
-	height: $animaHeight * 1.3;
-	background: none #8900EB;
-  font-size: $fontSize * 1.3;
-}
+	&[data-level='2']{
+		$ratio : 1.3;
+		width: round($animaWidth * $ratio);
+		height: round($animaHeight * $ratio);
+		background: none #8900EB;
+		font-size: round($fontSize * $ratio);
+	}
 
-.frog[data-level='3']{
-	width: $animaWidth * 1.4;
-	height: $animaHeight * 1.4;
-	background: none #C500EB;
-  font-size: $fontSize * 1.4;
-}
+	&[data-level='3']{
+		$ratio : 1.4;
+		width: round($animaWidth * $ratio);
+		height: round($animaHeight * $ratio);
+		background: none #C500EB;
+		font-size: round($fontSize * $ratio);
+	}
 
-.frog[data-level='4']{
-	width: $animaWidth * 1.5;
-	height: $animaHeight * 1.5;
-	background: none #EB00CC;
-  font-size: $fontSize * 1.5;
-}
+	&[data-level='4']{
+		width: $animaWidth * 1.5;
+		height: $animaHeight * 1.5;
+		background: none #EB00CC;
+		font-size: $fontSize * 1.5;
+	}
 
-.frog[data-level='5']{
-	width: $animaWidth * 1.6;
-	height: $animaHeight * 1.6;
-	background: none #EB006B;
-  font-size: $fontSize * 1.6;
-}
+	&[data-level='5']{
+		width: $animaWidth * 1.6;
+		height: $animaHeight * 1.6;
+		background: none #EB006B;
+		font-size: $fontSize * 1.6;
+	}
 
-.frog[data-level='6']{
-	width: $animaWidth * 1.7;
-	height: $animaHeight * 1.7;
-	background: none #EB0038;
-  font-size: $fontSize * 1.7;
-}
+	&[data-level='6']{
+		width: $animaWidth * 1.7;
+		height: $animaHeight * 1.7;
+		background: none #EB0038;
+		font-size: $fontSize * 1.7;
+	}
 
-.frog[data-level='7']{
-	width: $animaWidth * 1.8;
-	height: $animaHeight * 1.8;
-	background: none #EB4F00;
-  font-size: $fontSize * 1.8;
-}
+	&[data-level='7']{
+		width: $animaWidth * 1.8;
+		height: $animaHeight * 1.8;
+		background: none #EB4F00;
+		font-size: $fontSize * 1.8;
+	}
 
-.frog[data-level='8']{
-	width: $animaWidth * 1.9;
-	height: $animaHeight * 1.9;
-	background: none #EBA300;
-  font-size: $fontSize * 1.9;
-}
+	&[data-level='8']{
+		width: $animaWidth * 1.9;
+		height: $animaHeight * 1.9;
+		background: none #EBA300;
+		font-size: $fontSize * 1.9;
+	}
 
-.frog[data-level='9']{
-	width: $animaWidth * 2;
-	height: $animaHeight * 2;
-	background: none #EBD300;
-  font-size: $fontSize * 2;
-}
+	&[data-level='9']{
+		width: $animaWidth * 2;
+		height: $animaHeight * 2;
+		background: none #EBD300;
+		font-size: $fontSize * 2;
+	}
 
-.frog[data-level='10']{
-	width: $animaWidth * 2.1;
-	height: $animaHeight * 2.1;
-	background: none #FFFFFF;
-  color: #DDDDDD;
-  font-size: $fontSize * 2.1;
+	&[data-level='10']{
+		width: $animaWidth * 2.1;
+		height: $animaHeight * 2.1;
+		background: none #FFFFFF;
+		color: #DDDDDD;
+		font-size: $fontSize * 2.1;
+	}
 }
