--- a/css/styles.css
+++ b/css/styles.css
@@ -12,21 +12,23 @@
 #waveform {
   width: 250px;
   height: 250px;
+  margin-top: 20px;
+  margin-left: 20px;
 }
 
-/* line 14, ../scss/_interface.scss */
+/* line 16, ../scss/_interface.scss */
 .tracklist {
   width: 250px;
   list-style-type: none;
 }
-/* line 18, ../scss/_interface.scss */
+/* line 20, ../scss/_interface.scss */
 .tracklist li {
   height: 89px;
   margin-bottom: 4px;
   background: none #AAAAAA;
 }
 
-/* line 25, ../scss/_interface.scss */
+/* line 27, ../scss/_interface.scss */
 #track-control {
   float: left;
   width: 250px;
@@ -35,32 +37,32 @@
   color: white;
   font-family: 'player';
 }
-/* line 33, ../scss/_interface.scss */
+/* line 35, ../scss/_interface.scss */
 #track-control div {
   float: left;
   cursor: pointer;
   margin-left: 18px;
 }
 
-/* line 40, ../scss/_interface.scss */
+/* line 42, ../scss/_interface.scss */
 #track-control-back, #track-control-next, #track-control-repeat {
   width: 40px;
   font-size: 40px;
   line-height: 1.2em;
 }
-/* line 45, ../scss/_interface.scss */
+/* line 47, ../scss/_interface.scss */
 #track-control-back.disabled, #track-control-next.disabled, #track-control-repeat.disabled {
   color: #666666;
 }
 
-/* line 50, ../scss/_interface.scss */
+/* line 52, ../scss/_interface.scss */
 #track-control-pause {
   width: 36px;
   font-size: 65px;
   line-height: 0.75em;
 }
 
-/* line 59, ../scss/_interface.scss */
+/* line 61, ../scss/_interface.scss */
 #volume {
   width: 200px;
   height: 85px;
@@ -68,7 +70,7 @@
   float: left;
 }
 
-/* line 66, ../scss/_interface.scss */
+/* line 68, ../scss/_interface.scss */
 #bg_volume, #se_volume {
   width: 150px;
   height: 20px;
@@ -77,13 +79,13 @@
   position: relative;
 }
 
-/* line 74, ../scss/_interface.scss */
+/* line 76, ../scss/_interface.scss */
 .info-text {
   float: left;
   color: white;
 }
 
-/* line 79, ../scss/_interface.scss */
+/* line 81, ../scss/_interface.scss */
 #time-control {
   float: left;
   width: 800px;
@@ -93,12 +95,12 @@
   font-family: 'player';
   font-size: 30px;
 }
-/* line 88, ../scss/_interface.scss */
+/* line 90, ../scss/_interface.scss */
 #time-control div {
   float: left;
   cursor: pointer;
 }
-/* line 93, ../scss/_interface.scss */
+/* line 95, ../scss/_interface.scss */
 #time-control section {
   width: 600px;
   height: 30px;
@@ -106,18 +108,18 @@
   float: left;
   position: relative;
 }
-/* line 100, ../scss/_interface.scss */
+/* line 102, ../scss/_interface.scss */
 #time-control section .slider {
   width: 550px;
 }
 
-/* line 106, ../scss/_interface.scss */
+/* line 108, ../scss/_interface.scss */
 #time-counter {
   float: left;
   margin-top: -10px;
 }
 
-/* line 111, ../scss/_interface.scss */
+/* line 113, ../scss/_interface.scss */
 .slider {
   border-width: 1px;
   border-style: solid;
@@ -132,7 +134,7 @@
   left: 20px;
 }
 
-/* line 125, ../scss/_interface.scss */
+/* line 127, ../scss/_interface.scss */
 .tooltip {
   position: absolute;
   display: block;
@@ -156,7 +158,7 @@
   /* W3C */
 }
 
-/* line 143, ../scss/_interface.scss */
+/* line 145, ../scss/_interface.scss */
 .icon_volume {
   content: "";
   position: absolute;
@@ -168,7 +170,7 @@
   margin-top: -5px;
 }
 
-/* line 153, ../scss/_interface.scss */
+/* line 155, ../scss/_interface.scss */
 .ui-slider-handle {
   position: absolute;
   z-index: 2;
@@ -183,7 +185,7 @@
   margin-left: -12px;
 }
 
-/* line 166, ../scss/_interface.scss */
+/* line 168, ../scss/_interface.scss */
 .ui-slider-range {
   background: #ffffff;
   /* Old browsers */
