--- a/jade/index.jade
+++ b/jade/index.jade
@@ -4,13 +4,15 @@ html(lang='ja')
     meta(charset='utf-8')
     title re(a)ct - Sound Interaction with HTML5 Web Audio API
     meta(name='keywords', content='HTML5,Web Audio API,JavaScript')
-    meta(name='description', content='Sound Interaction with HTML5 Web Audio API')
+    meta(name='description', content='Sound Interaction Experiment with HTML5 Web Audio API')
     meta(name='author', content='Shinnosuke Watanabe')
+
     meta(property='og:type', content='website')
     meta(property='og:url', content='http://shinnn.github.io/re-a-ct/')
     meta(property='og:image', content='')
-    meta(property='og:description', content='')
+    meta(property='og:description', content='Sound Interaction Experiment with HTML5 Web Audio API')
     meta(property='og:site_name', content='RE(A)CT - Sound Interaction with HTML5 Web Audio API')
+
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='format-detection', content='telephone=no')
     link(href='css/normalize.css', rel='stylesheet', media='screen')
