--- a/jade/index.jade
+++ b/jade/index.jade
@@ -71,5 +71,5 @@ html(lang='ja')
     
     mixin loadJQuery('2.0.3')
     script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-    script(src='js/contrib.js')
+    script(src='js/vendor.js')
     script(src='js/re-a-ct.js')
