--- a/jade/index.jade
+++ b/jade/index.jade
@@ -15,7 +15,11 @@ html(lang='ja')
 
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(name='format-detection', content='telephone=no')
-    link(href='css/styles.css', rel='stylesheet', media='screen')
+    // build:css css/styles.css
+    // bower:css
+    // endbower
+    link(href='debug/css/styles.css', rel='stylesheet', media='screen')
+    // endbuild
   body
     include google-analytics
 
@@ -54,21 +58,15 @@ html(lang='ja')
           | &nbsp;/&nbsp;
           span 00:00
       #shortcut
-    
-    mixin loadJQuery(version)
-      script(src='//ajax.googleapis.com/ajax/libs/jquery/#{version}/jquery.min.js')
 
-      - var jQueryFallbacks = [];
-      - jQueryFallbacks[0] = 'http://code.jquery.com/jquery-' + version + '.min.js';
-      - jQueryFallbacks[1] = 'http://ajax.aspnetcdn.com/ajax/jQuery/jquery-' + version + '.min.js';
-      - jQueryFallbacks[2] = 'http://cdnjs.cloudflare.com/ajax/libs/jquery/' + version + '/jquery.min.js';
-      - jQueryFallbacks[3] = 'js/jquery' + (version.charAt(0) === '1'? '1': '') +'.js';
-  
-      each url in jQueryFallbacks
-        script.
-          window.jQuery || document.write('<script src=#{url}><\/script>');
-    
-    mixin loadJQuery('2.1.1')
-    script(src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js')
-    script(src='js/vendor.js')
-    script(src='js/re-a-ct.js')
+    include jquery
+
+    script(src='//ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js')
+
+    // build:js js/app.js
+    // bower:js
+    // endbower
+    script(src='debug/js/banner.js')
+    script(src='debug/js/buffer-loader.js')
+    script(src='debug/js/re-a-ct.js')
+    // endbuild
